# mnist-diffusion

./: .gitignore  config.yaml  pyproject.toml  readme.md  requirements.txt  sampling.py  train.py  train.sh
MyDiffusion/: Diffusion.py  Utils.py  noise_sheduler.py  reverse_decoder.py  sampling_weights.py
MyDiffusion/modules/: DiT.py  UNet.py  layer.py
scripts/: inference.sh  train.sh
src/: gui.py  main.py  sampling.py  train.py
src/MyDiffusion/: Diffusion.py  __init__.py
src/MyDiffusion/modules/: DiT.py  layer.py
src/tiny_DDPM/: Diffusion.py  __init__.py  forward_encoder.py
src/tiny_DDPM/modules/: DiT.py  UNet.py
tests/: test_utils.py
